# geopetl

./: .gitignore  Dockerfile  README.md  config.sh.example  docker-compose.yml  geopetl_Dockerfile  oracle-docker-compose.yml  oracle_Dockerfile  postgis-docker-compose.yml  postgis-sde-rds-compose.yml  postgis_Dockerfile  postgis_sde_rds_Dockerfile  postgissde_Dockerfile  postgressde-docker-compose.yml  postgressde_Dockerfile  pull-oracle-rpm.sh  pyproject.toml  pytest-requirements.txt  requirements.txt  sde-rds-compose.yml  sde_rds_Dockerfile  setup.py
.github/workflows/: .oracle_tests.yml.un~  .postgis_tests.yml.un~  main.yml  oracle_tests.yml  oracle_tests.yml~  postgis_tests.yml  postgis_tests.yml~  postgressde_tests.yml  rds_sde_tests.yml  requirements.txt  sde_rds_tests.yml
geopetl/: __init__.py  base.py  carto.py  oracle_sde.py  postgis.py  util.py
geopetl/fixtures_data/schemas/: point.json
geopetl/fixtures_data/staging/: point.csv
geopetl/tests/: conftest.py  test_conn.py  test_oraclesde.py  test_postgis.py  test_postgressde.py  tests_config.py
geopetl/tests/fixtures_data/schemas/: line.json  point.json  polygon.json
geopetl/tests/fixtures_data/staging/: line.csv  multipolygon.csv  point.csv  polygon.csv
geopetl/transform/: reproject.py  reproject_util.py
scripts/: entrypoint.sh  oracle_entrypoint.sh  postgis_sde_rds_tests_entrypoint.sh  postgis_tests.sh  postgis_tests_entrypoint.sh  postgissde_tests_entrypoint.sh  postgressde_tests.sh  postgressde_tests_entrypoint.sh  pull-oracle-rpm.sh  python_pg_isready.py  sde_rds_tests_entrypoint.sh
